# comfyui-shiyu-tools

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  routes.py  shiyu_tools.py
core/: __init__.py  comfyui_bridge.py  extension_adapter.py  graph_adapter.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  MODULE_TEMPLATE.md
infrastructure/: __init__.py
infrastructure/command/: __init__.py  command_bus.py  commands.py
infrastructure/event/: __init__.py  event_bus.py  events.py
infrastructure/logger/: __init__.py  logger.py
infrastructure/repository/: __init__.py  base_repository.py  group_repository.py  prompt_repository.py
infrastructure/storage/: __init__.py  json_storage.py  memory_storage.py  storage.py
kernel/: __init__.py  kernel.py  lifecycle.py  module.py  permission.py  registry.py
services/: __init__.py
services/node_group/: __init__.py  group_controller.py  group_service.py
services/prompt/: __init__.py  prompt_controller.py  prompt_service.py
tests/: __init__.py
tests/unit/infrastructure/: test_command_bus.py  test_event_bus.py  test_storage.py
tests/unit/kernel/: test_lifecycle.py  test_registry.py
tests/unit/services/: test_group_service.py  test_prompt_service.py
ui/: __init__.py
ui/framework/: __init__.py  dialog.py  inspector.py  sidebar.py  toast.py  toolbar.py
ui/node_group/: __init__.py  group_panel.py
ui/prompt/: __init__.py  prompt_panel.py
web/: __init__.py  shiyu-tools.css  shiyu-tools.js
web/js/: shiyu-tools.js
