[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "comfyui-shiyu-tools"
version = "0.1.0"
description = "ComfyUI Enterprise Plugin Framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ShiRuYu"},
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
